--- a/src/configure.in
+++ b/src/configure.in
@@ -1059,12 +1059,12 @@ V5_AC_OUTPUT_MAKEFILE(.
 
 	lib lib/kdb
 
-	lib/crypto lib/crypto/krb/ lib/crypto/krb/crc32 lib/crypto/builtin/des lib/crypto/krb/dk
-        lib/crypto/krb/enc_provider lib/crypto/krb/hash_provider
-        lib/crypto/krb/keyhash_provider
-        lib/crypto/builtin lib/crypto/builtin/md4 lib/crypto/builtin/md5
-        lib/crypto/krb/old lib/crypto/krb/raw lib/crypto/builtin/sha1
-        lib/crypto/builtin/arcfour lib/crypto/krb/yarrow lib/crypto/builtin/aes
+	lib/crypto lib/crypto/krb lib/crypto/krb/crc32 lib/crypto/builtin/des
+	lib/crypto/krb/dk lib/crypto/krb/enc_provider
+	lib/crypto/krb/hash_provider lib/crypto/krb/keyhash_provider
+	lib/crypto/builtin lib/crypto/builtin/md4 lib/crypto/builtin/md5
+	lib/crypto/krb/old lib/crypto/krb/raw lib/crypto/builtin/sha1
+	lib/crypto/builtin/arcfour lib/crypto/krb/yarrow lib/crypto/builtin/aes
 	lib/crypto/crypto_tests
 
 	lib/krb5 lib/krb5/error_tables lib/krb5/asn.1 lib/krb5/ccache
