Get "make depend" to work in an unbuilt source tree, since bad deps files can make it difficult to build the tree.  To do this, make the depends target depend on generated header files and on header file copies or links into the main include directory.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22486 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/appl/libpty/Makefile.in
+++ b/src/appl/libpty/Makefile.in
@@ -65,7 +65,7 @@ clean-unix::
 	$(RM) libpty.a $(BUILDTOP)/include/libpty.h pty_err.c pty_err.h
 clean-unix:: clean-liblinks clean-libs clean-libobjs
 
-depend::  pty_err.h
+depend:: includes pty_err.h
 
 #install:: libpty.h
 #	$(INSTALL_DATA) $(srcdir)/libpty.h  $(DESTDIR)$(KRB5_INCDIR)/libpty.h
