--- a/src/lib/kdb/Makefile.in
+++ b/src/lib/kdb/Makefile.in
@@ -61,6 +61,8 @@ clean-unix:: clean-liblinks clean-libs clean-libobjs
 
 generate-files-mac: darwin.exports
 
+depend:: adb_err.h
+
 @lib_frag@
 @libobj_frag@
 
