Fix deplibs for t_crc
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22487 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/crypto_tests/Makefile.in
+++ b/src/lib/crypto/crypto_tests/Makefile.in
@@ -120,7 +120,7 @@ t_cksum4: t_cksum4.o $(CRYTPO_DEPLIB)
 t_cksum5: t_cksum5.o $(CRYPTO_DEPLIB)
 	$(CC_LINK) -o t_cksum5 t_cksum5.o $(K5CRYPTO_LIB) $(COM_ERR_LIB) $(SUPPORT_LIB) $(LIBS)
 
-t_crc: t_crc.o $(K5CRYPTO_LIB) $(SUPPORT_DEPLIB)
+t_crc: t_crc.o $(CRYPTO_DEPLIB) $(SUPPORT_DEPLIB)
 	$(CC_LINK) -o $@ t_crc.o $(K5CRYPTO_LIB) $(SUPPORT_LIB)
 
 aes-test: aes-test.$(OBJEXT) $(CRYPTO_DEPLIB)
