In crypto_tests: for t_nfold, link against an nfold object file in the build directory, not the source directory.  Remove the nfold object from the t_encrypt dependency list since we don't directly use it in the linking rule.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22489 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/crypto_tests/Makefile.in
+++ b/src/lib/crypto/crypto_tests/Makefile.in
@@ -79,10 +79,10 @@ check-unix:: t_nfold t_encrypt t_prf t_prng t_hmac t_cf2 \
 
 #	$(RUN_SETUP) $(VALGRIND) ./t_pkcs5
 
-t_nfold$(EXEEXT): t_nfold.$(OBJEXT) $(srcdir)/../krb/nfold$(DYNOBJEXT) $(SUPPORT_DEPLIB)
-	$(CC_LINK) -o $@ t_nfold.$(OBJEXT) $(srcdir)/../krb/nfold$(DYNOBJEXT) $(SUPPORT_LIB)
+t_nfold$(EXEEXT): t_nfold.$(OBJEXT) ../krb/nfold$(DYNOBJEXT) $(SUPPORT_DEPLIB)
+	$(CC_LINK) -o $@ t_nfold.$(OBJEXT) ../krb/nfold$(DYNOBJEXT) $(SUPPORT_LIB)
 
-t_encrypt$(EXEEXT): t_encrypt.$(OBJEXT) $(srcdir)/../krb/nfold$(DYNOBJEXT) $(CRYPTO_DEPLIB) $(SUPPORT_DEPLIB)
+t_encrypt$(EXEEXT): t_encrypt.$(OBJEXT) $(CRYPTO_DEPLIB) $(SUPPORT_DEPLIB)
 	$(CC_LINK) -o $@ t_encrypt.$(OBJEXT)  -lkrb5 -lk5crypto -lcom_err $(SUPPORT_LIB)
 
 t_prf$(EXEEXT): t_prf.$(OBJEXT) $(SUPPORT_DEPLIB)
