Fix lib/crypto/krb/dk/Makefile.in mydir value.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22520 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/krb/dk/Makefile.in
+++ b/src/lib/crypto/krb/dk/Makefile.in
@@ -1,6 +1,6 @@
 thisconfigdir=../../../..
 myfulldir=lib/crypto/krb/dk
-mydir=lib/crypto/dk
+mydir=lib/crypto/krb/dk
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..
 LOCALINCLUDES = -I$(srcdir)/..  -I$(srcdir)/../../@CRYPTO_IMPL@
 DEFS=
