--- a/src/plugins/kdb/db2/libdb2/Makefile.in
+++ b/src/plugins/kdb/db2/libdb2/Makefile.in
@@ -13,7 +13,7 @@ SUBDIROBJLISTS=$(STOBJLISTS)
 RELDIR=../plugins/kdb/db2/libdb2
 
 HDRDIR=$(BUILDTOP)/include
-HDRS =	$(HDRDIR)/db.h $(HDRDIR)/db-config.h $(HDRDIR)/db-ndbm.h
+HDRS =	$(HDRDIR)/db.h $(HDRDIR)/db-config.h
 
 SHLIB_EXPDEPS=$(SUPPORT_DEPLIB)
 SHLIB_EXPLIBS=$(SUPPORT_LIB)
@@ -26,12 +26,10 @@ clean-unix:: clean-libs clean-includes
 
 includes:: $(HDRS)
 
-$(HDRDIR)/db.h: $(srcdir)/include/db.h
-	$(CP) $(srcdir)/include/db.h $@
-$(HDRDIR)/db-config.h: include/db-config.h
-	$(CP) $(srcdir)/include/db-config.h $@
-$(HDRDIR)/db-ndbm.h: $(srcdir)/include/db-ndbm.h
-	$(CP) $(srcdir)/include/db-ndbm.h $@
+$(HDRDIR)/db.h: $(srcdir)/include/db.hin
+	$(CP) $(srcdir)/include/db.hin $@
+$(HDRDIR)/db-config.h: include/db-config.hin
+	$(CP) $(srcdir)/include/db-config.hin $@
 
 clean-includes::
 	$(RM) $(HDRS) include/*.stmp
