--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -195,7 +195,7 @@ WINMAKEFILES=Makefile \
 	include\Makefile \
 	lib\Makefile lib\crypto\Makefile \
 	lib\crypto\krb\crc32\Makefile lib\crypto\builtin\des\Makefile \
-	lib\crypto\krb\dk\Makefile lib\crypto\krb\enc_provider\Makefile \
+	lib\crypto\krb\dk\Makefile lib\crypto\builtin\enc_provider\Makefile \
 	lib\crypto\krb\hash_provider\Makefile \
 	lib\crypto\krb\keyhash_provider\Makefile \
 	lib\crypto\krb\raw\Makefile lib\crypto\old\Makefile \
@@ -268,7 +268,7 @@ WINMAKEFILES=Makefile \
 ##DOS##	$(WCONFIG) config < $@.in > $@
 ##DOS##lib\crypto\krb\dk\Makefile: lib\crypto\krb\dk\Makefile.in $(MKFDEP)
 ##DOS##	$(WCONFIG) config < $@.in > $@
-##DOS##lib\crypto\krb\enc_provider\Makefile: lib\crypto\krb\enc_provider\Makefile.in $(MKFDEP)
+##DOS##lib\crypto\builtin\enc_provider\Makefile: lib\crypto\builtin\enc_provider\Makefile.in $(MKFDEP)
 ##DOS##	$(WCONFIG) config < $@.in > $@
 ##DOS##lib\crypto\krb\hash_provider\Makefile: lib\crypto\krb\hash_provider\Makefile.in $(MKFDEP)
 ##DOS##	$(WCONFIG) config < $@.in > $@
@@ -395,7 +395,7 @@ FILES= ./* \
 	config/* include/* include/kerberosIV/* \
 	include/krb5/* include/krb5/stock/* include/sys/* lib/* \
 	lib/crypto/* lib/crypto/krb/crc32/* lib/crypto/builtin/des/* lib/crypto/krb/dk/* \
-	lib/crypto/krb/enc_provider/* lib/crypto/krb/hash_provider/* \
+	lib/crypto/builtin/enc_provider/* lib/crypto/krb/hash_provider/* \
 	lib/crypto/krb/keyhash_provider/* lib/crypto/krb/old/* lib/crypto/krb/raw/* \
 	lib/crypto/builtin/sha1/* lib/crypto/builtin/arcfour/* lib/crypto/builtin/md4/* \
 	lib/crypto/builtin/md5/* lib/crypto/krb/yarrow/* \
