--- a/src/lib/crypto/builtin/aes/Makefile.in
+++ b/src/lib/crypto/builtin/aes/Makefile.in
@@ -12,28 +12,30 @@ DEFS=
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 
+CIMPL = @CRYPTO_IMPL@/aes
+
 STLIBOBJS=\
-	aescrypt.o	\
-	aestab.o	\
-	aeskey.o	\
-	aes_s2k.o
+	../../$(CIMPL)/aescrypt.o	\
+	../../$(CIMPL)/aestab.o	\
+	../../$(CIMPL)/aeskey.o	\
+	../../$(CIMPL)/aes_s2k.o
 
 OBJS=\
-	$(OUTPRE)aescrypt.$(OBJEXT)	\
-	$(OUTPRE)aestab.$(OBJEXT)	\
-	$(OUTPRE)aeskey.$(OBJEXT)	\
-	$(OUTPRE)aes_s2k.$(OBJEXT)
+	$(OUTPRE)../../$(CIMPL)/aescrypt.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/aestab.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/aeskey.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/aes_s2k.$(OBJEXT)
 
 SRCS=\
-	$(srcdir)/aescrypt.c	\
-	$(srcdir)/aestab.c	\
-	$(srcdir)/aeskey.c	\
-	$(srcdir)/aes_s2k.c
+	$(srcdir)..//../$(CIMPL)/aescrypt.c	\
+	$(srcdir)..//../$(CIMPL)/aestab.c	\
+	$(srcdir)/../../$(CIMPL)/aeskey.c	\
+	$(srcdir)/../../$(CIMPL)/aes_s2k.c
 
 GEN_OBJS=\
-	$(OUTPRE)aescrypt.$(OBJEXT)	\
-	$(OUTPRE)aestab.$(OBJEXT)	\
-	$(OUTPRE)aeskey.$(OBJEXT)
+	$(OUTPRE)../../$(CIMPL)/aescrypt.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/aestab.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/aeskey.$(OBJEXT)
 
 ##DOS##LIBOBJS = $(OBJS)
 
