--- a/src/lib/crypto/builtin/des/Makefile.in
+++ b/src/lib/crypto/builtin/des/Makefile.in
@@ -12,51 +12,53 @@ DEFS=
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 
+CIMPL = @CRYPTO_IMPL@/des
+
 STLIBOBJS=\
-	afsstring2key.o	\
-	d3_cbc.o	\
-	d3_aead.o	\
-	d3_kysched.o	\
-	des_prf.o 	\
-	f_aead.o 	\
-	f_cbc.o 	\
-	f_cksum.o	\
-	f_parity.o 	\
-	f_sched.o 	\
-	f_tables.o	\
-	key_sched.o	\
-	string2key.o	\
-	weak_key.o
+	../../$(CIMPL)/afsstring2key.o	\
+	../../$(CIMPL)/d3_cbc.o	\
+	../../$(CIMPL)/d3_aead.o	\
+	../../$(CIMPL)/d3_kysched.o	\
+	../../$(CIMPL)/des_prf.o 	\
+	../../$(CIMPL)/f_aead.o 	\
+	../../$(CIMPL)/f_cbc.o 	\
+	../../$(CIMPL)/f_cksum.o	\
+	../../$(CIMPL)/f_parity.o 	\
+	../../$(CIMPL)/f_sched.o 	\
+	../../$(CIMPL)/f_tables.o	\
+	../../$(CIMPL)/key_sched.o	\
+	../../$(CIMPL)/string2key.o	\
+	../../$(CIMPL)/weak_key.o
 
-OBJS=	$(OUTPRE)afsstring2key.$(OBJEXT)	\
-	$(OUTPRE)d3_cbc.$(OBJEXT)	\
-	$(OUTPRE)d3_aead.$(OBJEXT)	\
-	$(OUTPRE)d3_kysched.$(OBJEXT)	\
-	$(OUTPRE)des_prf.$(OBJEXT) 	\
-	$(OUTPRE)f_aead.$(OBJEXT) 	\
-	$(OUTPRE)f_cbc.$(OBJEXT) 	\
-	$(OUTPRE)f_cksum.$(OBJEXT)	\
-	$(OUTPRE)f_parity.$(OBJEXT) 	\
-	$(OUTPRE)f_sched.$(OBJEXT) 	\
-	$(OUTPRE)f_tables.$(OBJEXT)	\
-	$(OUTPRE)key_sched.$(OBJEXT)	\
-	$(OUTPRE)string2key.$(OBJEXT)	\
-	$(OUTPRE)weak_key.$(OBJEXT)
+OBJS=	$(OUTPRE)../../$(CIMPL)/afsstring2key.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/d3_cbc.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/d3_aead.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/d3_kysched.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/des_prf.$(OBJEXT) 	\
+	$(OUTPRE)../../$(CIMPL)/f_aead.$(OBJEXT) 	\
+	$(OUTPRE)../../$(CIMPL)/f_cbc.$(OBJEXT) 	\
+	$(OUTPRE)../../$(CIMPL)/f_cksum.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/f_parity.$(OBJEXT) 	\
+	$(OUTPRE)../../$(CIMPL)/f_sched.$(OBJEXT) 	\
+	$(OUTPRE)../../$(CIMPL)/f_tables.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/key_sched.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/string2key.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/weak_key.$(OBJEXT)
 
-SRCS=	$(srcdir)/afsstring2key.c	\
-	$(srcdir)/d3_cbc.c	\
-	$(srcdir)/d3_aead.c	\
-	$(srcdir)/d3_kysched.c	\
-	$(srcdir)/des_prf.c 	\
-	$(srcdir)/f_aead.c	\
-	$(srcdir)/f_cbc.c	\
-	$(srcdir)/f_cksum.c	\
-	$(srcdir)/f_parity.c	\
-	$(srcdir)/f_sched.c	\
-	$(srcdir)/f_tables.c	\
-	$(srcdir)/key_sched.c	\
-	$(srcdir)/weak_key.c	\
-	$(srcdir)/string2key.c
+SRCS=	$(srcdir)/../../$(CIMPL)/afsstring2key.c	\
+	$(srcdir)/../../$(CIMPL)/d3_cbc.c	\
+	$(srcdir)/../../$(CIMPL)/d3_aead.c	\
+	$(srcdir)/../../$(CIMPL)/d3_kysched.c	\
+	$(srcdir)/../../$(CIMPL)/des_prf.c 	\
+	$(srcdir)/../../$(CIMPL)/f_aead.c	\
+	$(srcdir)/../../$(CIMPL)/f_cbc.c	\
+	$(srcdir)/../../$(CIMPL)/f_cksum.c	\
+	$(srcdir)/../../$(CIMPL)/f_parity.c	\
+	$(srcdir)/../../$(CIMPL)/f_sched.c	\
+	$(srcdir)/../../$(CIMPL)/f_tables.c	\
+	$(srcdir)/../../$(CIMPL)/key_sched.c	\
+	$(srcdir)/../../$(CIMPL)/weak_key.c	\
+	$(srcdir)/../../$(CIMPL)/string2key.c
 
 ##DOS##LIBOBJS = $(OBJS)
 
