Crypto modularity proj: OpemSSL crypto feed for hmac/md5/md4/sha1/rc4/des/des3(w/o iov)
bigredbutton: whitespace


git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22709 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/builtin/arcfour/Makefile.in
+++ b/src/lib/crypto/builtin/arcfour/Makefile.in
@@ -12,20 +12,22 @@ DEFS=
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 
+CIMPL = @CRYPTO_IMPL@/arcfour
+
 STLIBOBJS=\
-	arcfour.o	\
-	arcfour_aead.o	\
-	arcfour_s2k.o
+	../../$(CIMPL)/arcfour.o	\
+	../../$(CIMPL)/arcfour_aead.o	\
+	../../$(CIMPL)/arcfour_s2k.o
 
 OBJS=\
-	$(OUTPRE)arcfour.$(OBJEXT)	\
-	$(OUTPRE)arcfour_aead.$(OBJEXT)	\
-	$(OUTPRE)arcfour_s2k.$(OBJEXT)
+	$(OUTPRE)../../$(CIMPL)/arcfour.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/arcfour_aead.$(OBJEXT)	\
+	$(OUTPRE)../../$(CIMPL)/arcfour_s2k.$(OBJEXT)
 
 SRCS=\
-	$(srcdir)/arcfour.c	\
-	$(srcdir)/arcfour_aead.c\
-	$(srcdir)/arcfour_s2k.c
+	$(srcdir)/../../$(CIMPL)/arcfour.c	\
+	$(srcdir)/../../$(CIMPL)/arcfour_aead.c\
+	$(srcdir)/../../$(CIMPL)/arcfour_s2k.c
 
 ##DOS##LIBOBJS = $(OBJS)
 
