--- a/src/util/support/Makefile.in
+++ b/src/util/support/Makefile.in
@@ -153,13 +153,17 @@ T_K5BUF_OBJS= t_k5buf.o k5buf.o $(PRINTF_ST_OBJ)
 t_k5buf: $(T_K5BUF_OBJS)
 	$(CC_LINK) -o t_k5buf $(T_K5BUF_OBJS)
 
-TEST_PROGS= t_k5buf
+t_unal: t_unal.o
+	$(CC_LINK) -o t_unal t_unal.o
+
+TEST_PROGS= t_k5buf t_unal
 
 check-unix:: $(TEST_PROGS)
 	./t_k5buf
+	./t_unal
 
 clean::
-	$(RM) t_k5buf.o t_k5buf
+	$(RM) t_k5buf.o t_k5buf t_unal.o t_unal
 
 @lib_frag@
 @libobj_frag@
