--- a/src/util/support/Makefile.in
+++ b/src/util/support/Makefile.in
@@ -102,7 +102,8 @@ SRCS=\
 	$(srcdir)/strlcpy.c \
 	$(srcdir)/printf.c \
 	$(srcdir)/mkstemp.c \
-	$(srcdir)/t_k5buf.c
+	$(srcdir)/t_k5buf.c \
+	$(srcdir)/t_unal.c 
 
 SHLIB_EXPDEPS =
 # Add -lm if dumping thread stats, for sqrt.
