Create DB headers before recursing for "make depend" in plugins/kdb/db2/libdb2, to restore the r22486 functionality ("make depend" in an unbuilt source tree) after r22572 (predictable "make depend" output for DB headers).
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22774 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/plugins/kdb/db2/libdb2/Makefile.in
+++ b/src/plugins/kdb/db2/libdb2/Makefile.in
@@ -21,7 +21,7 @@ SHLIB_DIRS=-L$(TOPLIBD)
 SHLIB_RDIRS=$(KRB5_LIBDIR)
 
 all-unix:: includes all-libs
-all-prerecurse: $(HDRS)
+all-prerecurse depend-prerecurse: $(HDRS)
 clean-unix:: clean-libs clean-includes
 
 includes:: $(HDRS)
