Remove autoconf.h on "make distclean". Check for the presence of a build in the src tree for "make depend". Suggest "make distclean" when "make depend" detects a build in the  src tree or an attempt to make depend in the src tree.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22776 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/post.in
+++ b/src/config/post.in
@@ -28,6 +28,11 @@ $(BUILDTOP)/.depend-verify-srcdir:
 	@if test "$(srcdir)" = "." ; then \
 		echo 1>&2 error: cannot build dependencies with srcdir=. ; \
 		echo 1>&2 "(can't distinguish generated files from source files)" ; \
+		echo 1>&2 "Run 'make distclean' and create a separate build dir" ; \
+		exit 1 ; \
+	elif test -f "$(top_srcdir)/include/autoconf.h"; then \
+		echo 1>&2 "error: generated headers found in source tree" ; \
+		echo 1>&2 "Run 'make distclean' in source tree first" ; \
 		exit 1 ; \
 	else \
 		if test -r $(BUILDTOP)/.depend-verify-srcdir; then :; \
