--- a/src/include/Makefile.in
+++ b/src/include/Makefile.in
@@ -130,6 +130,9 @@ clean-windows::
 clean::
 	$(RM) osconf.new $(BUILT_HEADERS)
 
+distclean::
+	$(RM) autoconf.h
+
 install-headers-unix install:: krb5/krb5.h profile.h
 	$(INSTALL_DATA) $(srcdir)/krb5.h $(DESTDIR)$(KRB5_INCDIR)$(S)krb5.h
 	$(INSTALL_DATA) $(srcdir)/kdb.h $(DESTDIR)$(KRB5_INCDIR)$(S)kdb.h
