Add keytab_local.c to the kadmin client SRCS variable, so that we generate dependencies for its object file.  This change causes kadmin.local to be properly rebuilt when keytab.c changes.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22789 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/kadmin/cli/Makefile.in
+++ b/src/kadmin/cli/Makefile.in
@@ -12,7 +12,7 @@ COMMON_OBJS = kadmin.o kadmin_ct.o ss_wrapper.o getdate.o
 KADMIN_OBJS = $(COMMON_OBJS) keytab.o
 LOCAL_OBJS = $(COMMON_OBJS) keytab_local.o
 
-SRCS = kadmin.c kadmin_ct.c ss_wrapper.c getdate.c keytab.c
+SRCS = kadmin.c kadmin_ct.c ss_wrapper.c getdate.c keytab.c keytab_local.c
 
 LOCALINCLUDES=-I$(srcdir)
 
