Move the implementation of krb5_copy_keyblock[_contents] into crypto  to allow internal use (similar to krb5_free_keyblock[_contents]). Define krb5_key type and initial internal representation. Define the constructor, destructor, and accessors.
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/enc-perf@22793 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/krb/Makefile.in
+++ b/src/lib/crypto/krb/Makefile.in
@@ -44,6 +44,7 @@ STLIBOBJS=\
 	enctype_compare.o	\
 	enctype_to_string.o	\
 	etypes.o		\
+	key.o			\
 	keyblocks.o 		\
 	keyed_cksum.o		\
 	keyed_checksum_types.o	\
@@ -86,6 +87,7 @@ OBJS=\
 	$(OUTPRE)enctype_compare.$(OBJEXT)	\
 	$(OUTPRE)enctype_to_string.$(OBJEXT)	\
 	$(OUTPRE)etypes.$(OBJEXT)		\
+	$(OUTPRE)key.$(OBJECT)			\
 	$(OUTPRE)keyblocks.$(OBJEXT) 		\
 	$(OUTPRE)keyed_cksum.$(OBJEXT)		\
 	$(OUTPRE)keyed_checksum_types.$(OBJEXT)	\
@@ -127,6 +129,7 @@ SRCS=\
 	$(srcdir)/enctype_compare.c	\
 	$(srcdir)/enctype_to_string.c	\
 	$(srcdir)/etypes.c		\
+	$(srcdir)/key.c			\
 	$(srcdir)/keyblocks.c 		\
 	$(srcdir)/keyed_cksum.c		\
 	$(srcdir)/keyed_checksum_types.c\
