Remove OBJS.ST from SUBDIROBJLISTS so that running make does not rebuild shared library when running make from the top.  (make otherwise thinks that OBJS.ST depends on "all-recurse" - which does not exist, and rebuilds it all the time.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22806 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/builtin/Makefile.in
+++ b/src/lib/crypto/builtin/Makefile.in
@@ -46,7 +46,7 @@ SUBDIROBJLISTS= des/OBJS.ST md4/OBJS.ST 	\
 		md5/OBJS.ST sha1/OBJS.ST 	\
 		enc_provider/OBJS.ST 		\
 		arcfour/OBJS.ST 		\
-		aes/OBJS.ST OBJS.ST
+		aes/OBJS.ST 
 
 ##DOS##LIBOBJS = $(OBJS)
 
