--- a/src/lib/crypto/krb/prf/Makefile.in
+++ b/src/lib/crypto/krb/prf/Makefile.in
@@ -4,6 +4,7 @@ mydir=lib/crypto/krb/prf
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..
 LOCALINCLUDES = -I$(srcdir) -I$(srcdir)/.. 		\
 		-I$(srcdir)/../dk			\
+		-I$(srcdir)/../../@CRYPTO_IMPL@ 	\
 		-I$(srcdir)/../../@CRYPTO_IMPL@/md5 	\
 		-I$(srcdir)/../../@CRYPTO_IMPL@/sha1 
 DEFS=
