--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -196,7 +196,7 @@ WINMAKEFILES=Makefile \
 	lib\Makefile lib\crypto\Makefile \
 	lib\crypto\krb\crc32\Makefile lib\crypto\builtin\des\Makefile \
 	lib\crypto\krb\dk\Makefile lib\crypto\builtin\enc_provider\Makefile \
-	lib\crypto\krb\hash_provider\Makefile \
+	lib\crypto\builtin\hash_provider\Makefile \
 	lib\crypto\krb\keyhash_provider\Makefile \
 	lib\crypto\krb\prf\Makefile lib\crypto\krb\rand2key\Makefile \
 	lib\crypto\krb\raw\Makefile lib\crypto\krb\old\Makefile \
@@ -271,7 +271,7 @@ WINMAKEFILES=Makefile \
 ##DOS##	$(WCONFIG) config < $@.in > $@
 ##DOS##lib\crypto\builtin\enc_provider\Makefile: lib\crypto\builtin\enc_provider\Makefile.in $(MKFDEP)
 ##DOS##	$(WCONFIG) config < $@.in > $@
-##DOS##lib\crypto\krb\hash_provider\Makefile: lib\crypto\krb\hash_provider\Makefile.in $(MKFDEP)
+##DOS##lib\crypto\builtin\hash_provider\Makefile: lib\crypto\builtin\hash_provider\Makefile.in $(MKFDEP)
 ##DOS##	$(WCONFIG) config < $@.in > $@
 ##DOS##lib\crypto\krb\keyhash_provider\Makefile: lib\crypto\krb\keyhash_provider\Makefile.in $(MKFDEP)
 ##DOS##	$(WCONFIG) config < $@.in > $@
@@ -396,7 +396,7 @@ FILES= ./* \
 	config/* include/* include/kerberosIV/* \
 	include/krb5/* include/krb5/stock/* include/sys/* lib/* \
 	lib/crypto/* lib/crypto/krb/crc32/* lib/crypto/builtin/des/* lib/crypto/krb/dk/* \
-	lib/crypto/builtin/enc_provider/* lib/crypto/krb/hash_provider/* \
+	lib/crypto/builtin/enc_provider/* lib/crypto/builtin/hash_provider/* \
 	lib/crypto/krb/keyhash_provider/* \
 	lib/crypto/krb/prf/* lib/crypto/krb/rand2key/* \
 	lib/crypto/krb/old/* lib/crypto/krb/raw/* \
